Show sync status in NoteListTopBar in mobile

--- a/justnote.org
+++ b/justnote.org
@@ -233,10 +233,10 @@
 - yarn add url-parse
 - yarn add react-native-safe-area-context
 - yarn add react-native-svg
-- yarn add 'https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?6d3814e88711af1394d0148586c871cff7038f6e'
+- yarn add 'https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?e333bd3216453a78428c76b09d5d5e7450681a64'
 - yarn add reselect
 - yarn add react-native-fast-image
-- yarn add react-native-mmkv-storage
+- yarn add react-native-mmkv-storage (use 0.4.4 for now to be able to debug)
   + Add pickFirst in build.gradle
   + Add proguard rules
   + require iOS target to 11.0
