Add sync menu in NoteListMenuPopup in mobile

--- a/justnote.org
+++ b/justnote.org
@@ -16,6 +16,7 @@
 ** github.com/zadam/trilium
 ** github.com/logseq/logseq
 ** github.com/twitter/TwitterTextEditor
+** www.serenity.re/en/notes
 * Same Name
 ** jusnote.com - The most powerful software for managing the legal practice
 ** justnotepad.com
