--- a/justnote.org
+++ b/justnote.org
@@ -133,16 +133,6 @@
   + No need to set storage size limit
   + might need to trim storage size!
   + might have issues with JSI, Hermes and Proguard!
-  + Proguard rules
-    # Keep all native methods, their classes and any classes in their descriptors
-    -keepclasseswithmembers,includedescriptorclasses class com.tencent.mmkv.** {
-        native <methods>;
-        long nativeHandle;
-        private static *** onMMKVCRCCheckFail(***);
-        private static *** onMMKVFileLengthError(***);
-        private static *** mmkvLogImp(...);
-        private static *** onContentChangedByOuterProcess(***);
-    }
 ** data
 *** Gaia
 - /notes/<listName>/<id>_<parentIds>/index.json
@@ -169,13 +159,48 @@
 - web vs native
 *** inline image
 *** how and when to save
-*** web
-**** github.com/wordpress-mobile/gutenberg
-**** github.com/ianstormtaylor/slate
-**** github.com/quilljs/quill
-**** draftjs.org
-*** native
-**** github.com/wordpress-mobile/gutenberg-mobile
+*** libraries
+**** Quill
+- github.com/quilljs/quill, github.com/imnapo/react-native-cn-quill
+- Need to upload an image to server and use <img> tag?
+  + No, can use data image encoding but the file will be large
+  + Need to manually extract from a note file?
+- Need to install plugin to resize an image
+- There's a bug on editing a very long article and no fix?
+- Production version is very old and no promise on newer version, dead project?
+- BSD license
+**** TinyMCE
+- github.com/tinymce/tinymce, github.com/rmccue/react-native-tinymce
+- High development activities
+- there are paid plans
+- support insert a table and resize an image
+- require to show their name&logo as attribution!
+- Use webview on react-native, bad for performance?
+- Obscure js code to prevent malicious hackers?
+- there's an option to upload an image and have data URL?
+- GNU LGPL license and require attribution
+**** Trix
+- github.com/basecamp/trix, github.com/vitalyliber/react-native-trix
+- need to use WebView on react-native
+- MIT license
+**** Slate
+- github.com/ianstormtaylor/slate
+- Not support mobile browser for now, in development
+- Need to use WebView on react-native
+**** DraftJs
+- draftjs.org
+- Not officially support mobile browser, there're known issues
+- Need to use WebView on react-native
+**** Wordpress Gutenberg
+- github.com/WordPress/gutenberg, github.com/wordpress-mobile/gutenberg-mobile
+- This's not just a text editor, it's a block editor for making a web page or a blog. Maybe this's too much?
+- React native library
+- GNU GPL license
+**** CKEditor
+- github.com/ckeditor/ckeditor5-react, github.com/ssg-luke/react-native-ckeditor5, github.com/mzupek/react-native-ckeditor5
+- GNU GPL license
+- well suport on mobile browser
+- Need to use WebView on react-native
 * MVP
 * Fully Fledged
 * Implementation
@@ -223,7 +248,6 @@
 - npx react-native init Justnotecc
 - yarn add https://github.com/bracedotto/tailwind-rn#eb66f05f229c8525d913130808eddc2ebffbd692
 - yarn add redux react-redux redux-loop
-- yarn add react-native-svg
 - yarn add babel-plugin-inline-import --dev
   + Update babel.config.js to work with .svg
 - yarn add @welldone-software/why-did-you-render --dev
@@ -232,8 +256,6 @@
   + Run npx react-native link
   + medium.com/@mehrankhandev/ultimate-guide-to-use-custom-fonts-in-react-native-77fcdf859cf4
 - yarn add url-parse
-- yarn add react-native-safe-area-context
-- yarn add react-native-svg
 - yarn add 'https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?e333bd3216453a78428c76b09d5d5e7450681a64'
 - yarn add reselect
 - yarn add react-native-fast-image
@@ -243,6 +265,43 @@
   + require iOS target to 11.0
 - yarn add react-native-animated-spinkit
 - yarn add react-native-keyboard-manager
+- yarn add @wordpress/block-library @wordpress/base-styles
+- yarn add --dev react-native-sass-transformer sass
+- yarn add --dev babel-plugin-react-native-platform-specific-extensions
+- yarn add --dev @babel/plugin-transform-react-jsx
+- yarn add --dev @wordpress/babel-plugin-import-jsx-pragma
+- yarn add @react-native-community/blur
+- yarn add @react-navigation/native @react-navigation/stack
+  + https://reactnavigation.org/docs/getting-started/
+- yarn add react-native-safe-area
+- yarn add react-native-modal
+- yarn add util
+- yarn add react-native-url-polyfill@1.1.2
+- yarn add core-js@3.8.3
+- yarn add react-native-svg
+- yarn add git+https://github.com/wordpress-mobile/react-native-masked-view.git#f65a51a3320e58404d7f38d967bfd1f42b439ca9
+- yarn add git+https://github.com/wordpress-mobile/react-native-dark-mode.git#f09bf1480e7b34536413ab3300f29e4375edb2c6
+- yarn add git+https://github.com/wordpress-mobile/react-native-gesture-handler.git#b80e959908b383a26d6e35d992d6d529efad0b16
+- yarn add git+https://github.com/wordpress-mobile/react-native-get-random-values.git#f03f2c16414aff4ea76064dcd00a9e3c6efc838d
+- yarn add git+https://github.com/Riglerr/react-native-hr.git#2d01a5cf77212d100e8b99e0310cce5234f977b3
+- yarn add git+https://github.com/wordpress-mobile/react-native-hsv-color-picker
+- yarn add git+https://github.com/wordpress-mobile/react-native-keyboard-aware-scroll-view.git#gb-v0.8.8
+- yarn add git+https://github.com/wordpress-mobile/react-native-linear-gradient.git#52bf43077171cff8714ce3e0155f3ebb7f55bc37
+- yarn add git+https://github.com/wordpress-mobile/react-native-reanimated.git#ed48f510fba751cd75da7629e92276166766be91
+- yarn add git+https://github.com/wordpress-mobile/react-native-safe-area-context.git#1e3c0d34f31b59fb79f71ec0b4c39c513f684871
+- yarn add git+https://github.com/wordpress-mobile/react-native-screens.git#b3d907bda2695743f35fd874261dcd27e0912eca
+- yarn add git+https://github.com/wordpress-mobile/react-native-video.git#1b964b107863351ed744fc104d7952bbec3e2d4f
+- yarn add git+https://github.com/justnotecc/react-native-slider.git#84463628348f412d95751e17c80fe3c410f41e93
+- yarn add git+https://github.com/iamcco/jsdom-jscore-rn.git#a562f3d57c27c13e5bfc8cf82d496e69a3ba2800
+- yarn add ~/Drive/Workspace/ref/react-native/gutenberg/packages/block-editor
+- yarn add ~/Drive/Workspace/ref/react-native/gutenberg/packages/react-native-aztec
+- yarn add ~/Drive/Workspace/ref/react-native/gutenberg/packages/react-native-bridge
+  + Must use modified version of react-native-bridge
+  + Manually link in MainApplication.js
+  + Check for iOS!
+- yarn add react-native-unimodules
+  + https://docs.expo.io/bare/installing-unimodules/
+  + Check for iOS!
 - Android
   + android/gradle/wrapper/gradle-wrapper.properties
     ~ set gradle version in zip fpath
@@ -301,5 +360,4 @@
 - No username: open below advance dolphin wolf man never useless maximum clock proof bike
 - No username: angry juice scatter parrot spider remind tuna crash giggle section isolate film
 * servers
-- https://192.168.1.37:3000
 - 
