--- a/justnote.org
+++ b/justnote.org
@@ -271,6 +271,8 @@
 - yarn add react-native-keyboard-manager
 - yarn add react-native-webview
 - yarn add core-js
+- yarn add react-native-image-resizer
+- yarn add react-native-file-access
 - Android
   + android/gradle/wrapper/gradle-wrapper.properties
     ~ set gradle version in zip fpath
