Save an image as a file, not a string in web

--- a/justnote.org
+++ b/justnote.org
@@ -231,6 +231,8 @@
 - yarn add file-saver
 - yarn add @ckeditor/ckeditor5-react
 - yarn add file:../../../ckeditor5/packages/ckeditor5-build-decoupled-document
+- yarn add @types/node @types/react @types/react-dom @types/jest @types/react-redux
+- yarn add @types/url-parse @types/file-saver
 ** Server steps
 *** s3
 - Set public and enable CORS
