--- a/justnote.org
+++ b/justnote.org
@@ -235,6 +235,7 @@
   + create config-overrides.js
   + change scripts in packages.js
   + ref: stackoverflow.com/questions/70429654/webpack-5-errors-cannot-resolve-crypto-http-and-https-in-reactjs-proje, github.com/facebook/create-react-app/issues/11756, stackoverflow.com/questions/63729455/hosted-images-with-react-pdf/70441023#70441023
+- yarn add @zip.js/zip.js
 ** Server steps
 *** s3
 - Set public and enable CORS
