--- a/justnote.org
+++ b/justnote.org
@@ -271,17 +271,17 @@
   + Add pickFirst in build.gradle
   + Add proguard rules
   + require iOS target to 11.0
-- yarn add https://github.com/bracedotto/tailwind-rn#96848a8d2c2370e4f5e57a773ace172c4073157d
-- yarn add 'https://gitpkg.now.sh/bracedotto/blockstack-react-native/BlockstackSDK?a2aacea2fe4e384b6dbb51de05e343fe0f4602d6'
+- yarn add https://github.com/stxapps/tailwind-rn#96848a8d2c2370e4f5e57a773ace172c4073157d
+- yarn add 'https://gitpkg.now.sh/stxapps/blockstack-react-native/BlockstackSDK?a2aacea2fe4e384b6dbb51de05e343fe0f4602d6'
 - yarn add babel-plugin-inline-import --dev
   + Update babel.config.js to work with .svg
 - yarn add @welldone-software/why-did-you-render --dev
-- yarn add typescript --dev
-- yarn add react-native-iap @wewatch/lexorank axios
-- yarn add react-native-device-time-format
+- yarn add typescript@4.0.8 --dev
+- yarn add react-native-iap@8.2.1 @wewatch/lexorank axios@0.27.2
+- yarn add https://github.com/stxapps/react-native-device-time-format#63f4a9158a91c391d67317a489ccfe8ec28a7c84
 - Font
   + Create react-native.config.js
-  + Run npx react-native link
+  + Run npx react-native-asset
   + medium.com/@mehrankhandev/ultimate-guide-to-use-custom-fonts-in-react-native-77fcdf859cf4
 - Android
   + android/gradle/wrapper/gradle-wrapper.properties
@@ -325,8 +325,12 @@
     ~ app icons
   + ios/Justnotecc/AppDelegate.m
     ~ Add source code
-  + ios/Justnotecc/Targets/Build Settings
-    ~ Search Paths/Library Search Paths: both Debug and Release add "${SDKROOT}/usr/lib/swift" non-recursive (developer.apple.com/forums/thread/655438)
+  + Select Justnotecc in left pane, new -> swift file and generate header binding
+    ~ if doesn't work
+      > ios/Justnotecc/Targets/Build Settings
+      > Search Paths/Library Search Paths: both Debug and Release add "${SDKROOT}/usr/lib/swift" non-recursive (developer.apple.com/forums/thread/655438)
+  + Targets -> Justnotecc -> Build Settings -> Packaging -> Product Name: Justnotecc
+  + Targets -> Justnotecc -> Build Settings -> Build Options -> Always embed Swift standard libraries: $(inherited)
 - Setup Universal Link and App Link on server
    + Upload assetlinks.json to justnote.cc/.well-known/, *not .wellknown!*
     ~ assume debug.keystore unchanged: git update-index --assume-unchanged packages/mobile/android/app/debug.keystore
