--- a/justnote.org
+++ b/justnote.org
@@ -241,6 +241,7 @@
 - yarn add @wewatch/lexorank axios
 - yarn add tailwindcss-labeled-groups
 - yarn add idb-keyval
+- yarn add jest-diff queue
 ** Server steps
 *** namecheap
 - use ALIAS for root domain
@@ -288,6 +289,7 @@
 - yarn add htmlparser2
 - yarn add react-native-flag-secure
 - yarn add --dev redux-flipper react-native-flipper@0.164.0
+- yarn add jest-diff queue
 - Font
   + Create react-native.config.js
   + Run npx react-native-asset
